Bug 158924 - Switching three slides when double clicking on the navigation button
Summary: Switching three slides when double clicking on the navigation button
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Vladislav Tarakanov
URL:
Whiteboard: target:24.8.0 target:24.2.1
Keywords:
Depends on:
Blocks: Slide-Show
  Show dependency treegraph
 
Reported: 2023-12-29 18:38 UTC by Vladislav Tarakanov
Modified: 2026-05-15 16:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vladislav Tarakanov 2023-12-29 18:38:41 UTC
Description:
When using the navigation bar, double-clicking the toggle button switches to the next or previous slide 3 slides, not 2. The first click switches 1 slide, the second click switches 2 slides at once.

Steps to Reproduce:
1. Enable use of navigation bar
2. Run a presentation with multiple slides
3. Double click on the button to switch to the next slide

Actual Results:
Switches 3 slides (one on the first click, two on the second)

Expected Results:
Switches 2 slides


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 24135dc15a797ca91dd32c70cbc4d26a05dfd127
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: CL threaded

Also reproduced on
Version: 7.6.3.2 (X86_64) / LibreOffice Community
Build ID: 60(Build:2)
CPU threads: 12; OS: Linux 6.1; UI render: default; VCL: gtk3_kde5
Locale: ru-RU (ru_RU.UTF-8); UI: ru-RU
Calc: CL threaded
Comment 1 m_a_riosv 2023-12-30 02:09:20 UTC
(In reply to Vladislav Tarakanov from comment #0)
>....
> 3. Double click on the button to switch to the next slide
Why double-click to switch next slide, one click works for me.
> ....

https://help.libreoffice.org/latest/en-US/text/simpress/guide/show.html?DbPAR=IMPRESS#bm_id5592516
Comment 2 Vladislav Tarakanov 2023-12-30 02:16:25 UTC
(In reply to m.a.riosv from comment #1)
> (In reply to Vladislav Tarakanov from comment #0)
> >....
> > 3. Double click on the button to switch to the next slide
> Why double-click to switch next slide, one click works for me.
> > ....
> 
> https://help.libreoffice.org/latest/en-US/text/simpress/guide/show.
> html?DbPAR=IMPRESS#bm_id5592516

1 click switches 1 slide, no problem here. The problem occurs when users double-click a button on the navigation bar (this seems to happen accidentally when they try to quickly switch slides using the navigation bar). In this case, the number of button clicks does not correspond to the number of slides switched, which is the problem.
Comment 3 Vladislav Tarakanov 2024-01-04 16:11:21 UTC
We looked in more detail at the behavior of multiple mouse clicks on the slide switch buttons on the navigation bar. It seems that the more quick clicks are made on the button, the more slides will be switched in a row.

Although the bug has not yet been confirmed, for us the behavior is corrected with this patch:https://gerrit.libreoffice.org/c/core/+/161625
Comment 4 Amos Keister 2024-02-01 09:49:47 UTC
(In reply to Vladislav Tarakanov from comment #3)
> We looked in more detail at the behavior of multiple mouse clicks on the
> slide switch buttons on the navigation bar. It seems that the more quick
> clicks are made on the button, the more slides will be switched in a row.
> 
> Although the bug has not yet been confirmed, for us the behavior is
> corrected with this patch:https://gerrit.libreoffice.org/c/core/+/161625 https://geometrydashonline.io

Oh. Nice answer
Comment 5 William Parris 2024-02-02 09:54:44 UTC
(In reply to Vladislav Tarakanov from comment #3)
> We looked in more detail at the behavior of multiple mouse clicks on the
> slide switch buttons on the navigation bar. It seems that the more quick
> clicks are made on the button, the more slides will be switched in a row.
> 
> Although the bug has not yet been confirmed, for us the behavior is
> corrected with this patch:https://gerrit.libreoffice.org/c/core/+/161625 https://fnafgames.io

Thanks for the source.
Comment 6 Commit Notification 2024-02-05 06:15:36 UTC
Vladislav Tarakanov committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ab320f4e11c70b50e5beddf12ad925f192941d9a

tdf#158924 Handle multi-clicks for navigation bar

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-02-05 11:58:24 UTC
Vladislav Tarakanov committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/f0164f2755be1e759894601d6097ef70e0411f3d

tdf#158924 Handle multi-clicks for navigation bar

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Soundboard Max 2026-04-01 06:48:45 UTC
(In reply to William Parris from comment #5)
> (In reply to Vladislav Tarakanov from comment #3)
> > We looked in more detail at the behavior of multiple mouse clicks on the
> > slide switch buttons on the navigation bar. It seems that the more quick
> > clicks are made on the button, the more slides will be switched in a row.
> > 
> > Although the bug has not yet been confirmed, for us the behavior is
> > corrected with this patch:https://gerrit.libreoffice.org/c/core/+/161625 https://soundboardmax.com/
> 
> Thanks for the source.
Comment 9 soundbuttonspro 2026-05-15 16:30:08 UTC
We looked in more detail at the behavior of multiple mouse clicks on the slide switch buttons on the navigation bar. It seems that the more quick clicks are made on the button, the more slides will be switched in a row.

Although the bug has not yet been confirmed, for us the behavior is corrected with this patch:https://gerrit.libreoffice.org/c/core/+/161625  https://soundbuttonspro.com/