tdf#158924 Handle multi-clicks for navigation bar

Added handling for navigation bar buttons when many quick
clicks have been made. To do this, after processing the first click,
the number of clicks in the series is stored in a new variable.
Until the entire series of clicks has been processed, the slide
switch will not occur.

Change-Id: I8f4416a0c7928bb78609be8ff52252782c37f5a0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161625
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit ab320f4e11c70b50e5beddf12ad925f192941d9a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162904